# patterns_project

./: .gitignore  Makefile  pyproject.toml
architecture_patterns/query_object/: raw_query.py
patterns/: pyproject.toml
patterns/patterns/data_mapper/: data_mapper.py
patterns/patterns/db_connector/: connector_cls.py  connector_raw.py
patterns/patterns/domain_model/: group_model.py  model.py  project_model.py  service.py  test_model.py
patterns/patterns/query_object/: query_cls.py  query_fucn.py  query_func.py
tests/: test_db_connector.py  test_query_cls.py  test_query_func.py
