[tool.poetry]
name = "patterns"
version = "0.1.0"
description = ""
authors = ["V-U-Simon <V-U-Simon@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
yapf = "^0.40.1"
isort = "^5.12.0"
autoflake = "^2.2.0"
djlint = "^1.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.yapf]
based_on_style = "google"
# google
# facebook
column_limit = 120
indent_width = 4

# Ignore directories
[tool.yapfignore]
ignore_patterns = [".venv/"]
